# piped-rpc

./: CMakeLists.txt  README.md  rpc-client-main.cpp  rpc-client.cpp  rpc-client.h  rpc-pipe-transport.cpp  rpc-pipe-transport.h  rpc-protocol.cpp  rpc-protocol.h  rpc-server-main.cpp  rpc-server.cpp  rpc-server.h  rpc-socket-transport.cpp  rpc-socket-transport.h  rpc-test.cpp
